# CDADance

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LIPMStabilizer.yaml  README.md  create_build_and_compile.sh
.github/workflows/: dispatch-release.yaml  dispatch.yaml
etc/: CDADance.in.yaml  LIPMStabilizerWinnie.in.yaml  MosquittoPlugin.yaml  datastore-to-replay.yaml  mc_rtc.yaml  mc_rtc_hrp4_mujoco.yaml  mc_rtc_hrp4_real.yaml  mc_rtc_rhps1_mujoco.yaml  mc_rtc_rhps1_real.yaml
etc/robots/: hrp4.yaml
plugins/: CMakeLists.txt
plugins/MosquittoPlugin/: CMakeLists.txt  MosquittoPlugin.cpp  MosquittoPlugin.h  README.md  TestMosquittoPublisher.cpp
plugins/MosquittoPlugin/etc/: MosquittoPlugin.yaml
plugins/XsensReplay/: CMakeLists.txt
plugins/XsensReplay/src/: XsensReplay.cpp  XsensReplay.h
src/: CMakeLists.txt  WalkingInterface.h  lib.cpp  mc_lipm_stabilizer.cpp  mc_lipm_stabilizer.h
src/states/: AutonomousInteraction.cpp  AutonomousInteraction.h  CMakeLists.txt  DisableWalk.cpp  DisableWalk.h  InterpolatePosture.cpp  InterpolatePosture.h  RosSubscriber.cpp  RosSubscriber.h  RosSubscriberData.h  Walk.cpp  Walk.h  XsensRetargetting.cpp  XsensRetargetting.h  hello_test_CPY.py  hpe_recog.py  sample_subscriber_code.h
src/states/data/: HalfSitting.in.yaml  HalfSitting.yaml  interaction.in.yaml  interaction.yaml  interpolateposture.in.yaml  interpolateposture.yaml  xsens.in.yaml  xsens.yaml
xsens/: extract.sh
